# Kademlia-rs

./: '  Cargo.toml  README.md
examples/: main.rs
src/: key.rs  lib.rs  main.rs  main2.rs  node.rs  pool.rs  query.rs  republish.rs  routing.rs  store.rs  transport.rs
ui/: README.md  dprint.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.svelte  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: ipc.rs  main.rs  manager.rs  node.rs
ui/src/components/: BootstrapNodes.svelte  Node.svelte  NodesContainer.svelte  Record.svelte  RoutingTable.svelte
ui/src/lib/: bindings.ts  ipc.ts  store.ts
