[package]
name = "kademlia-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node1"
path = "src/main.rs"

[[bin]]
name = "node2"
path = "src/main2.rs"

[dependencies]
sha2 = "0.10.6"
uint = "0.9.5"
rand = "0.8.5"
multiaddr = "0.17.0"
socket2 = "0.4.7"
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.25"
