[package]
name = "kademlia-rs"
version = "0.1.0"
edition = "2021"

[[example]]
name = "main"

[features]
debug = []

[dependencies]
sha2 = "0.10.6"
uint = "0.9.5"
rand = "0.8.5"
multiaddr = "0.17.0"
socket2 = "0.4.7"
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.25"
bincode = "1.3.3"
serde = { version = "1.0.151", features = ["derive"] }
bs58 = "0.4.0"
clap = { version = "4.0.32", features = ["derive"] }
arrayvec = "0.7.2"
libc = "0.2.139"
